Fix code spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -137,6 +137,10 @@ pre:has(code) {
     margin-bottom: 1rem;
 }
 
+.expressive-code {
+    margin-bottom: 1rem;
+}
+
 :has(table) {
     overflow-x: auto;
     display: block;
